fixed desktop apps on mobile landscape

--- a/src/components/DesktopApps.css
+++ b/src/components/DesktopApps.css
@@ -118,18 +118,6 @@
   box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.5);
 }
 
-/* .desktop-app-info {
-  position: absolute;
-  width: 90%;
-  height: auto;
-  background-color: white;
-  border-radius: 30px;
-  box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.5);
-  padding: 20px;
-  z-index: 998;
-  transform: translate(-50%, -50%);
-} */
-
 .area-1 {
   /* Styles for selectedArea 1 */
   top: 40%;
@@ -205,6 +193,27 @@
 
   .desktop-container h1 {
     font-size: 5vw;
+  }
+}
+
+@media screen and (max-width: 960px) and (max-height: 500px) and (orientation: landscape) {
+  .desktop-container {
+    min-height: 200vh;
+  }
+
+  .area-1 {
+    top: 60%;
+    left: 50%;
+  }
+
+  .area-2 {
+    top: 70%;
+    left: 50%;
+  }
+
+  .area-3 {
+    top: 60%;
+    left: 50%;
   }
 }
 
